[gd_scene load_steps=23 format=2]

[ext_resource path="res://sprites/player/idle/idle1.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://sprites/player/idle/idle2.png" type="Texture" id=3]
[ext_resource path="res://sprites/player/walk/walk1.png" type="Texture" id=4]
[ext_resource path="res://sprites/player/walk/walk4.png" type="Texture" id=5]
[ext_resource path="res://sprites/player/walk/walk2.png" type="Texture" id=6]
[ext_resource path="res://sprites/player/walk/walk3.png" type="Texture" id=7]
[ext_resource path="res://sprites/player/jump/jump1.png" type="Texture" id=8]
[ext_resource path="res://sprites/player/jump/jump2.png" type="Texture" id=9]
[ext_resource path="res://sprites/player/duck/duck1.png" type="Texture" id=10]
[ext_resource path="res://sprites/player/duck/duck2.png" type="Texture" id=11]
[ext_resource path="res://sprites/player/charged/charged4.png" type="Texture" id=12]
[ext_resource path="res://sprites/player/charged/charged2.png" type="Texture" id=13]
[ext_resource path="res://sprites/player/charged/charged5.png" type="Texture" id=14]
[ext_resource path="res://sprites/player/charged/charged1.png" type="Texture" id=15]
[ext_resource path="res://sprites/player/charged/charged6.png" type="Texture" id=16]
[ext_resource path="res://sprites/player/charged/charged3.png" type="Texture" id=17]
[ext_resource path="res://sprites/player/charged/charged7.png" type="Texture" id=18]
[ext_resource path="res://sound/sauce.wav" type="AudioStream" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 18 ) ],
"loop": true,
"name": "charged",
"speed": 10.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "duck",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3, 3 )

[node name="player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -5 )
frames = SubResource( 1 )
animation = "idle"
playing = true
flip_h = true

[node name="collisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 2 )

[node name="floorArea" type="Area2D" parent="."]
position = Vector2( 0, 8 )

[node name="floorBox" type="CollisionShape2D" parent="floorArea"]
position = Vector2( 0, -4 )
shape = SubResource( 3 )

[node name="aww" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )

[connection signal="animation_finished" from="sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="body_shape_entered" from="floorArea" to="." method="_on_floorArea_body_shape_entered"]
[connection signal="body_shape_exited" from="floorArea" to="." method="_on_floorArea_body_shape_exited"]
